Eerste keer aan gewerkt

--- a/Practicum OO - AOP.ipynb
+++ b/Practicum OO - AOP.ipynb
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,16 +101,109 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "class MyDeQue(MyQueue):\n",
-    "    def __init__(self):\n",
-    "        # TODO\n",
-    "        pass"
+    "    def __init__(self, a=[]):\n",
+    "        super().__init__(a)\n",
+    "\n",
+    "    def appendRight(self, x):\n",
+    "        self.enqueue(x)\n",
+    "\n",
+    "    def appendLeft(self, x):\n",
+    "        self.insert(0,x)\n",
+    "\n",
+    "    def popRight(self):\n",
+    "        if len(self) == 0:\n",
+    "            raise IndexError(\"Empty queue\")\n",
+    "        return self.pop()\n",
+    "\n",
+    "    def popLeft(self):\n",
+    "        if len(self) == 0:\n",
+    "            raise IndexError(\"Empty queue\")\n",
+    "        return self.dequeue()\n",
+    "\n",
+    "    def reverse(self):\n",
+    "        self[:] = self[::-1]\n",
+    "\n",
+    "    def rotateRight(self, n):\n",
+    "        if len(self) > 1:\n",
+    "            n = n % len(self)\n",
+    "            self[:] = self[-n:] + self[:-n]\n",
+    "\n",
+    "    def rotateLeft(self, n):\n",
+    "        if len(self) > 1:\n",
+    "            n = n % len(self)\n",
+    "            self[:] = self[n:] + self[:n]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "All tests passed!\n"
+     ]
+    }
+   ],
+   "source": [
+    "def test_mydeque():\n",
+    "    # Initialisatie zonder argumenten\n",
+    "    deque = MyDeQue()\n",
+    "\n",
+    "    # Test appendRight\n",
+    "    deque.appendRight(1)\n",
+    "    assert list(deque) == [1]\n",
+    "\n",
+    "    # Test appendLeft\n",
+    "    deque.appendLeft(0)\n",
+    "    assert list(deque) == [0, 1]\n",
+    "\n",
+    "    # Test popRight\n",
+    "    popped = deque.popRight()\n",
+    "    assert popped == 1\n",
+    "    assert list(deque) == [0]\n",
+    "\n",
+    "    # Test popLeft\n",
+    "    popped = deque.popLeft()\n",
+    "    assert popped == 0\n",
+    "    assert list(deque) == []\n",
+    "\n",
+    "    # Test reverse\n",
+    "    deque.appendRight(1)\n",
+    "    deque.appendRight(2)\n",
+    "    deque.appendRight(3)\n",
+    "    deque.appendRight(4)\n",
+    "    deque.reverse()\n",
+    "    assert list(deque) == [4, 3, 2, 1]\n",
+    "\n",
+    "    # Test rotateRight\n",
+    "    deque.rotateRight(2)\n",
+    "    assert list(deque) == [2, 1, 4, 3]\n",
+    "\n",
+    "    # Test rotateRight\n",
+    "    deque.rotateRight(-2)\n",
+    "    assert list(deque) == [4, 3, 2, 1]\n",
+    "\n",
+    "    # Test rotateLeft\n",
+    "    deque.rotateRight(-2)\n",
+    "    assert list(deque) == [2, 1, 4, 3]\n",
+    "\n",
+    "    # Test rotateLeft\n",
+    "    deque.rotateRight(2)\n",
+    "    assert list(deque) == [4, 3, 2, 1]\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    test_mydeque()\n",
+    "    print(\"All tests passed!\")"
    ]
   },
   {
@@ -126,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,22 +244,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "class SimpleSecureEvaluator(object):\n",
-    "    self.d = {} # empty dictionary\n",
-    "    \n",
+    "\n",
     "    def __init__(self):\n",
-    "        # TODO\n",
-    "        pass\n",
-    "    \n",
-    "    def eval(self, expressie):\n",
-    "        # TODO\n",
-    "        pass"
+    "        self.d = {} # empty dictionary\n",
+    "        \n",
+    "    def eval(self):\n",
+    "        while True:\n",
+    "            r = input(\"Type an expression: \")\n",
+    "            \n",
+    "            if r == \"mydir\":\n",
+    "                self.print_dict()\n",
+    "                continue\n",
+    "            if r == \"exit\":\n",
+    "                break\n",
+    "            \n",
+    "            if \"=\" in r:\n",
+    "                variable, expression = r.split(\"=\")\n",
+    "                variable = variable.strip()\n",
+    "                try:\n",
+    "                    result = eval(expression, self.d)\n",
+    "                    self.d[variable] = int(result)\n",
+    "                except Exception as e:\n",
+    "                    print(\"Error:\", e)\n",
+    "            else:\n",
+    "                try:\n",
+    "                    result = eval(r, self.d)\n",
+    "                    self.d[r] = result\n",
+    "                    print(result)\n",
+    "                except Exception as e:\n",
+    "                    print(\"Error\", e)\n",
+    "                    \n",
+    "\n",
+    "    def print_dict(self):\n",
+    "        custom_dict = {key: value for key, value in self.d.items() if not key.startswith(\"__\")}\n",
+    "        print(custom_dict)\n",
+    "\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    evaluator = SimpleSecureEvaluator()\n",
+    "    evaluator.eval()"
    ]
   },
   {
@@ -235,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -331,7 +454,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.10.7"
   }
  },
  "nbformat": 4,
